chandeliers-lus/tests/compile_fail/ui/tc/both-sides.rs
chandeliers_lus::decl! {
    const X : int = (true + true) + (false + false);
}

fn main() {}
